# eigen-backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 373f97019b84_campaign_status_posteriors_cohorts.py  3f4ce16113fa_events_provider_id_raw_suppression.py  452799e0f7a9_send_provider_provider_message_id.py  5764b4a1e4a5_auth_org_api_key_scope_campaigns_and_.py  87c769f98dcd_initial_schema.py  9aad1675cfee_decision_audit_log.py
eigen/: admin.py  auth.py  bandit.py  config.py  db.py  dispatcher.py  envloader.py  inbox.py  main.py  models.py  policy.py  routes.py  scheduler.py  schemas.py  sim.py  tasks.py  webhooks.py  worker.py
eigen/esp/: __init__.py  fake.py  inbox_adapter.py  log.py  resend_adapter.py
eigen/generator/: __init__.py  guardrails.py  llm.py  template.py
scripts/: email_list.csv  sample_recipients.csv  seed_demo.py  simulate.py
tests/: conftest.py  test_approval.py  test_async_send.py  test_auth.py  test_cohorts_and_stopping.py  test_dashboard_endpoints.py  test_generator_guardrails.py  test_scheduler.py  test_statistical.py  test_webhook_e2e.py
